# simple-encrypt

./: Makefile  README.md  make.bat  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: conf.py  index.rst
simple_encrypt/: __init__.py  simple_encrypt.py  simple_encrypt_cli.py  version.py
simple_encrypt/util/: file_read.py  file_write.py
tests/: conftest.py  test_simple_encrypt.py  test_simple_encrypt_cli.py
tests/data/: README.md  key.txt  value.txt
