[build-system]
requires = [
    "setuptools>=67.6.0",
    "wheel>=0.40.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "simple-encrypt"
dynamic = ["version", "readme", "dependencies"]
requires-python = ">=3.8"
description = "This can be used to encrypt and decrypt simple data sets"
keywords = [
]
authors = [
  { name="Benjamin P. Trachtenberg", email="e_ben_75-python@yahoo.com" },
]
maintainers = [
  {name = "Benjamin P. Trachtenberg", email = "e_ben_75-python@yahoo.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Documentation = "https://simple-encrypt.readthedocs.io/en/latest/"
Source = "https://github.com/btr1975/simple-encrypt"
Tracker = "https://github.com/btr1975/simple-encrypt/issues"

[project.scripts]
simple-encrypt-cli = "simple_encrypt:cli"

[tool.setuptools.packages.find]
include = [
    "simple_encrypt*",
]

# Add or remove file extensions to include the data
[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "simple_encrypt.version.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = {file = "requirements.txt"}

[tool.distutils.bdist_wheel]
universal = true

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "place_holder: marks tests as place_holder (deselect with -m 'not place_holder')",
]

[tool.coverage.run]
command_line= "-m pytest -vvv"

[tool.coverage.report]
include = [
    "simple_encrypt/*"
]

[tool.pylint]
max-line-length = 120
# This allows pylint to complain on FIXME and XXX notes
notes = [
    "FIXME",
    "XXX",
]
